src/app.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap');

@tailwind base;
@tailwind components;
@tailwind utilities;

body {
  @apply bg-neutral-900;
}

.font-roboto {
  font-family: Roboto, sans-serif;
}

.small-caps {
  font-variant: small-caps;
}

.no-highlight {
  -webkit-tap-highlight-color: transparent;
}

.mobile-nav-options {
  @apply font-roboto small-caps text-white block font-semibold text-lg hover:text-pink-600 transition-colors p-2 pl-6 whitespace-nowrap;
}

